2010-12-22  Sergio Martin <sergio.martin@artica.es>

	*  util/pandora_manage.pl: Fixed duplicate module creation
	into config file

2010-12-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed day name array. 0 corresponds
	  to Sunday. Fixes bug #3122177.

2010-12-22  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed codification bug in the
	conf modules declaration

2010-12-22  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_recode_db.pl: Removed from repository. Not
	  needed anymore (kept in the 3.1 branch).

2010-12-22  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Improved the end of execution
	message.

2010-12-20  Miguel de Dios  <miguel.dedios@artica.es>
	
	* util/pandora_recode_db.pl: added to recode the table "tpolicy_modules".

2010-12-16  Miguel de Dios  <miguel.dedios@artica.es>
	
	* DEBIAN/control, DEBIAN/make_deb_package.sh, pandora_console.spec,
	pandora_console.redhat.spec: update the version number.

2010-12-09  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	util/pandora_manage.pl
	util/pandora_sync_db.pl: Added agents and modules
	existence checks on source and destination in 
	sync db script. Added messages in execution time

2010-12-09  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed a typo from the
	default server path in configuration

2010-12-07  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed the snmp recon script 
	example to recognize the not consecutive interfaces

2010-12-02 Dario Rodriguez  <dario.rodriguez@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Fixed a bug with recon server.

2010-12-02  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Added wmic file path for FreeBSD.

2010-12-01  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_recode_db.pl: Redefine safe_input to avoid loading
	  a buggy one from a 3.1 Tools.pm.
